src/objects/Apttus_Config2__AttributeValueMatrixEntry__c.object
<CustomObject>
    <description>Represents a row (entry) in an attribute value matrix.</description>
    <fields>
        <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
        <description>ID of the associated attribute value matrix</description>
        <inlineHelpText>ID of the associated attribute value matrix</inlineHelpText>
        <label>Attribute Value Matrix</label>
        <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
        <relationshipLabel>Attribute Value Matrix Entries</relationshipLabel>
        <relationshipName>AttributeValueMatrixEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>The product color.</description>
        <inlineHelpText>The product color.</inlineHelpText>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>The product vendor.</description>
        <inlineHelpText>The product vendor.</inlineHelpText>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Delivery_Frequency__c</fullName>
        <label>Data Delivery Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Once</fullName>
                </value>
                <value>
                    <fullName>Seasonal H.Y</fullName>
                </value>
                <value>
                    <fullName>Semester</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Adhoc Non Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eligible_Countries__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SA</fullName>
                    <label>Saudi Arabia</label>
                </value>
                <value>
                    <fullName>EG</fullName>
                    <label>Egypt</label>
                </value>
                <value>
                    <fullName>KW</fullName>
                    <label>Kuwait</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                    <label>United Arab Emirates</label>
                </value>
                <value>
                    <fullName>LB</fullName>
                    <label>Lebanon</label>
                </value>
                <value>
                    <fullName>JO</fullName>
                    <label>Jordan</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>TN</fullName>
                    <label>Tunisia</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>GA</fullName>
                    <label>Gabon</label>
                </value>
                <value>
                    <fullName>CG</fullName>
                    <label>Congo</label>
                </value>
                <value>
                    <fullName>GN</fullName>
                    <label>Guinea</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>TG</fullName>
                    <label>Togo</label>
                </value>
                <value>
                    <fullName>ML</fullName>
                    <label>Mali</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>Burkina Faso</label>
                </value>
                <value>
                    <fullName>NE</fullName>
                    <label>Niger</label>
                </value>
                <value>
                    <fullName>CI</fullName>
                    <label>Côte d&apos;Ivoire</label>
                </value>
                <value>
                    <fullName>CM</fullName>
                    <label>Cameroon</label>
                </value>
                <value>
                    <fullName>SN</fullName>
                    <label>Senegal</label>
                </value>
                <value>
                    <fullName>MA</fullName>
                    <label>Morocco</label>
                </value>
                <value>
                    <fullName>FW</fullName>
                    <label>French West Africa</label>
                </value>
                <value>
                    <fullName>ZA</fullName>
                    <label>South Africa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <description>LC-8998: Used to perform data migration</description>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Migration_Key_Generator__c</fullName>
        <description>LC-8998: Used for master data key generation</description>
        <displayFormat>AVME-{0000000}</displayFormat>
        <label>Migration Key Generator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>No_Of_Territories__c</fullName>
        <label>No. of Territories</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>148 Territories</fullName>
                </value>
                <value>
                    <fullName>200 Territories</fullName>
                </value>
                <value>
                    <fullName>28 Territories</fullName>
                </value>
                <value>
                    <fullName>29 Territories</fullName>
                </value>
                <value>
                    <fullName>300 Territories</fullName>
                </value>
                <value>
                    <fullName>400 Territories</fullName>
                </value>
                <value>
                    <fullName>500 Territories</fullName>
                </value>
                <value>
                    <fullName>56 Territories</fullName>
                </value>
                <value>
                    <fullName>600 Territories</fullName>
                </value>
                <value>
                    <fullName>66 Territories</fullName>
                </value>
                <value>
                    <fullName>6 Territories</fullName>
                </value>
                <value>
                    <fullName>700 Territories</fullName>
                </value>
                <value>
                    <fullName>70 Territories</fullName>
                </value>
                <value>
                    <fullName>10 Territories</fullName>
                </value>
                <value>
                    <fullName>20 Territories</fullName>
                </value>
                <value>
                    <fullName>40 Territories</fullName>
                </value>
                <value>
                    <fullName>26 Territories</fullName>
                </value>
                <value>
                    <fullName>36 Territories</fullName>
                </value>
                <value>
                    <fullName>46 Territories</fullName>
                </value>
                <value>
                    <fullName>51 Territories</fullName>
                </value>
                <value>
                    <fullName>54 Territories</fullName>
                </value>
                <value>
                    <fullName>57 Territories</fullName>
                </value>
                <value>
                    <fullName>63 Territories</fullName>
                </value>
                <value>
                    <fullName>74 Territories</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>AUNZ</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Baltics</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>BeNeLux</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Central Africa</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cuba</fullName>
                    <isActive>false</isActive>
                    <label>Cuba</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_Mobile_Code_Tier__c</fullName>
        <label>CPQ-Del-Mobile Code Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_Tier_1_Mobile_Codes__c</fullName>
        <description>Mobile Codes for Marketing Persona SMS Add-On</description>
        <label>CPQ-Del-Tier Mobile Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>O_Mobile_Code_Tier__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Austrailia (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Austria (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Canada Shared Short</fullName>
                </value>
                <value>
                    <fullName>Croatia (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Czech (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Denmark (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Estonia (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Finland (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Germany (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Hong Kong (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Hungary (Private Long)</fullName>
                </value>
                <value>
                    <fullName>India (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Ireland (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Isreal (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Italy (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Japan (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Lativia (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Lithuania (Private Long)</fullName>
                </value>
                <value>
                    <fullName>New Zealand (Private Short)</fullName>
                </value>
                <value>
                    <fullName>Norway (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Phillipines (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Poland (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Portugal (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Salesforce Owned</fullName>
                </value>
                <value>
                    <fullName>Slovakia (Private Long)</fullName>
                </value>
                <value>
                    <fullName>South Africa (Private Short)</fullName>
                </value>
                <value>
                    <fullName>Spain (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Sweden (Private Long)</fullName>
                </value>
                <value>
                    <fullName>Switzerland (Private Long)</fullName>
                </value>
                <value>
                    <fullName>United Kingdom (Private Long)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
                <value>
                    <fullName>Zone 3</fullName>
                </value>
                <value>
                    <fullName>Zone 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <description>LC-8951: Used for OCE Sales Implementation Pricing. Label change according to story.</description>
        <label>Location of Resources</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                </value>
                <value>
                    <fullName>Nearshore</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <description>LC-8951: Used for OCE Sales Implementation Pricing. Label change according to story.</description>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Niche</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>LC-8907-field to show full ,partial, national ,sub national and national &amp;sub-national values</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>National &amp; Sub National</fullName>
                </value>
                <value>
                    <fullName>Sub National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Sub_Product__c</fullName>
        <description>LC-9182 : Sub Product attribute use for Consumer Health Partial Selection</description>
        <label>Sub Product</label>
        <type>Picklist</type>
        <valueSet>
										 
            <valueSetDefinition>
                <value>
                    <fullName>EG_PAC_N_TRADIT.WOUND HEA DRESSING</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_SURGICAL ABSORBENTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_FIXATIVE TAPES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BANDAGES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_PLASTERS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_INCONTINENCE CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BABY DISPOSABLES AND PRODUCTS FOR</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_INJECTION DEVICES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_TEST &amp; MEASURING INSTRUME</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_MEDICAL/SURGICAL AIDS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_CONTACT LENS CARE</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_BABY AND NURSING ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_CONTRACEPTION</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_N_HOUSEHOLD DISINFECTANTS- INSECTIC</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_TRADIT.WOUND HEA DRESSING</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_SURGICAL ABSORBENTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_FIXATIVE TAPES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BANDAGES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_PLASTERS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_INCONTINENCE CARE PRODUCTS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BABY DISPOSABLES AND PRODUCTS FOR</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_INJECTION DEVICES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_TEST &amp; MEASURING INSTRUME</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_MEDICAL/SURGICAL AIDS</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_CONTACT LENS CARE</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_BABY AND NURSING ACCESSORIES</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_CONTRACEPTION</fullName>
                </value>
                <value>
                    <fullName>EG_PAC_R_HOUSEHOLD DISINFECTANTS- INSECTIC</fullName>
                </value>
                <value>
                    <fullName>EG_PEC_N_FRAGRANCES</fullName>
                </value>
                <value>
                    <fullName>EG_PEC_N_BEAUTY PRODUCTS FOR MEN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <description>LC-8888 : Subscription Type for Additional Site Option Product.</description>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>CPQ-IQ-LC-12501: This is used to store Unit of Measure.</description>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>per month</fullName>
                </value>
                <value>
                    <fullName>per site</fullName>
                </value>
                <value>
                    <fullName>per document</fullName>
                </value>
                <value>
                    <fullName>per PDF</fullName>
                </value>
                <value>
                    <fullName>per visit</fullName>
                </value>
                <value>
                    <fullName>per webinar</fullName>
                </value>
                <value>
                    <fullName>per quiz</fullName>
                </value>
                <value>
                    <fullName>per video</fullName>
                </value>
                <value>
                    <fullName>per amendment</fullName>
                </value>
                <value>
                    <fullName>per language</fullName>
                </value>
                <value>
                    <fullName>per role</fullName>
                </value>
                <value>
                    <fullName>per manual</fullName>
                </value>
                <value>
                    <fullName>per session</fullName>
                </value>
                <value>
                    <fullName>per term</fullName>
                </value>
                <value>
                    <fullName>per tablet, per site</fullName>
                </value>
                <value>
                    <fullName>per tablet, per month</fullName>
                </value>
                <value>
                    <fullName>per sponsor</fullName>
                </value>
                <value>
                    <fullName>per change</fullName>
                </value>
                <value>
                    <fullName>per 10 documents</fullName>
                </value>
                <value>
                    <fullName>per month, per site</fullName>
                </value>
                <value>
                    <fullName>per block</fullName>
                </value>
                <value>
                    <fullName>per system</fullName>
                </value>
                <value>
                    <fullName>per consent</fullName>
                </value>
                <value>
                    <fullName>Per Unit</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Plate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute Value Matrix Entry</label>
    <nameField>
        <displayFormat>AVME-{0000000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Value Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>